feat: html 파일 위치 변경

--- a/chineseFoodPage.html
+++ b/chineseFoodPage.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Japanese Food Page</title>
+    <title>Chinese Food Page</title>
     <link rel="stylesheet" href="../css/ggemi_web.css"></link>
   </head>
   <body>
-<div id="japaneseFoodPage">
-    <img src="../img/철판구이 고쿠.png" width="600px">
-    <img src="../img/카이센동136.png" width="600px">
-    <img src="../img/키요이스키야키.png" width="600px">
-    <img src="../img/텐동요츠야.png" width="600px">
+<div id="chineseFoodPage">
+    <img src="./img/하우츠 마라탕.png" width="600px">
 </div>
   </body>
 </html>
