feat: hmtl 파일 위치 수정

--- a/SoutheastAsianFoodPage.html
+++ b/SoutheastAsianFoodPage.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>동남아 음식 페이지</title>
-    <link rel="stylesheet" href="../css/ggemi_web.css"></link>
+    <link rel="stylesheet" href="./css/ggemi_web.css"></link>
   </head>
   <body>
 <div id="southeastAsianFoodPage">
-    <img src="../img/딸랏롯빠이.png" width="600px">
-    <img src="../img/미분당.png" width="600px">
-    <img src="../img/아로이 팟타이.png" width="600px">
+    <img src="./img/딸랏롯빠이.png" width="600px">
+    <img src="./img/미분당.png" width="600px">
+    <img src="./img/아로이 팟타이.png" width="600px">
 </div>
   </body>
 </html>
