--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap");
     </style>
-    <link rel="stylesheet" href="../css/ggemi_web.css" />
-    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="./css/ggemi_web.css" />
+    <link rel="stylesheet" href="./css/navbar.css" />
 
     <title>샤로수길</title>
   </head>
@@ -47,7 +47,7 @@
 
         <img
           id="titleImg"
-          src="../기타 이미지/샤로젝트 숟가락 타이틀.png"
+          src="./기타 이미지/샤로젝트 숟가락 타이틀.png"
           width="600px"
           height="150px"
         />
@@ -66,17 +66,17 @@
         </div>
         <img
           id="stamp"
-          src="../기타 이미지/리얼 맛집 도장.png"
+          src="./기타 이미지/리얼 맛집 도장.png"
           width="80px"
           height="80px"
         />
       </header>
       <main>
-        <img id="dustCat" src="../기타 이미지/먼고.gif" width="400px" />
+        <img id="dustCat" src="./기타 이미지/먼고.gif" width="400px" />
       </main>
     </div>
-    <script type="module" src="../js/index.js"></script>
-    <script src="../js/quotes.js"></script>
-    <script src="../js/button.js"></script>
+    <script type="module" src="./js/index.js"></script>
+    <script src="./js/quotes.js"></script>
+    <script src="./js/button.js"></script>
   </body>
 </html>
