feat: navbar 수정, 도장 수정

--- a/chineseFoodPage.html
+++ b/chineseFoodPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chinese Food Page</title>
-    <link rel="stylesheet" href="../css/ggemi_web.css"></link>
+    <link rel="stylesheet" href="./css/ggemi_web.css"></link>
   </head>
   <body>
 <div id="chineseFoodPage">
