feat: image 경로 변경

--- a/SoutheastAsianFoodPage.html
+++ b/SoutheastAsianFoodPage.html
@@ -10,8 +10,8 @@
   <body>
 <div id="southeastAsianFoodPage">
     <img src="./img/딸랏롯빠이.png" width="600px">
-    <img src="./img/미분당.png" width="600px">
-    <img src="./img/아로이 팟타이.png" width="600px">
+    <img src="./img/미분당.png" width="600px">
+    <img src="./img/아로이 팟타이.png" width="600px">
 </div>
   </body>
 </html>
