--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <img
           id="titleImg"
-          src="./기타 이미지/샤로젝트 숟가락 타이틀.png"
+          src="./기타 이미지/샤로젝트 숟가락 타이틀.png"
           width="600px"
           height="150px"
         />
@@ -72,7 +72,7 @@
         />
       </header>
       <main>
-        <img id="dustCat" src="./기타 이미지/먼고.gif" width="400px" />
+        <img id="dustCat" src="./기타 이미지/먼고.gif" width="400px" />
       </main>
     </div>
     <script type="module" src="./js/index.js"></script>
