--- a/japaneseFoodPage.html
+++ b/japaneseFoodPage.html
@@ -9,10 +9,10 @@
   </head>
   <body>
 <div id="japaneseFoodPage">
-    <img src="./img/철판구이 고쿠.png" width="600px">
-    <img src="./img/카이센동136.png" width="600px">
-    <img src="./img/키요이스키야키.png" width="600px">
-    <img src="./img/텐동요츠야.png" width="600px">
+    <img src="./img/철판구이 고쿠.png" width="600px">
+    <img src="./img/카이센동136.png" width="600px">
+    <img src="./img/키요이스키야키.png" width="600px">
+    <img src="./img/텐동요츠야.png" width="600px">
 </div>
   </body>
 </html>
