--- a/koreanFoodPage.html
+++ b/koreanFoodPage.html
@@ -10,9 +10,9 @@
   <body>
     <div id="koreanFoodPage">
         <img src="./img/시골집.png" width="600px">
-        <img src="./img/어부사시가.png" width="600px">
-        <img src="./img/기절초풍왕순대.png" width="600px">
-        <img src="./img/제주상회.png" width="600px">
+        <img src="./img/어부사시가.png" width="600px">
+        <img src="./img/기절초풍왕순대.png" width="600px">
+        <img src="./img/제주상회.png" width="600px">
     </div>
   </body>
 </html>
